src/objects/eRebate__c.object
<CustomObject>
    <description>Rebate</description>
    <fields>
        <fullName>Acceptance_of_Supplier_s_T_Cs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Red Flag</description>
        <label>Acceptance of Supplier&apos;s T &amp; Cs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Pending_Days__c</fullName>
        <description>Days of Rebate waiting for approval</description>
        <formula>TODAY()  -  Rebate_Submission_Date__c</formula>
        <inlineHelpText>Days of Rebate waiting for approval</inlineHelpText>
        <label>Approval Pending Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Start_Date__c</fullName>
        <label>Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Agreement_Number__c</fullName>
        <inlineHelpText>Pls give Apttus Agreeement Number or give NO</inlineHelpText>
        <label>Apttus Agreement Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pls advise Apttus Agreement number or give NO in field field</inlineHelpText>
        <label>Apttus Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate_Checker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Give the approval if the Apttus agreement number is correct</inlineHelpText>
        <label>Apttus Rebate Checker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BL_MKT_Approver_Name__c</fullName>
        <description>1508 Release. Request by Pauline Ng for separating Rebate Layout. It&apos;s used for capturing more information of  Rebate.</description>
        <label>BL MKT Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL_Marketing_Mgr_1_MAG__c</fullName>
        <label>BL Marketing Mgr 1 MAG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL_Marketing_Mgr_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve Rebate for Disti , OEM/EMS channel</description>
        <label>BL Marketing Mgr 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebateMu74</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BL_Marketing_Mgr_2_MAG__c</fullName>
        <label>BL Marketing Mgr 2 MAG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL_Marketing_Mgr_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approvel Rebate for  channel of Disti. EMS/OEM</description>
        <label>BL Marketing Mgr 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rebate1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BL_Marketing_Mgr_3_MAG__c</fullName>
        <label>BL Marketing Mgr 3 MAG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL_Marketing_Mgr_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve rebate for Disti. and EMS/OEM channel</description>
        <label>BL Marketing Mgr 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rebate2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Intention__c</fullName>
        <label>Business Intention</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CACC_2__c</fullName>
        <formula>Sold_To_Number_2__r.CACC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CACC 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CACC_Code__c</fullName>
        <description>Formula updated to use newly created field - as part of CACC code impact analysis LineItem# 9 Date: 20-May-2015 By: Balaji G</description>
        <formula>Consolidated_Account_Code_Description__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CACC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CACC__c</fullName>
        <formula>Sold_To_Number__r.CACC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CACC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capped_Payout_USD__c</fullName>
        <description>Maximum rebate payout amount for the rebate program</description>
        <inlineHelpText>Maximum rebate payout amount for the rebate program</inlineHelpText>
        <label>Capped Payout (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_2__c</fullName>
        <formula>Sold_To_Number_2__r.Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_Account_Code_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Lookup field to replace lookup relation to CACC codes object. Implemented as part of CACC code analysis Line Item# 8 Date: 20-May-2015 By: Balaji G</description>
        <inlineHelpText>Pls select Consolidate Account Code if rebate is per Consoliate Code level</inlineHelpText>
        <label>Consolidated Account Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose active consolidated account code.</errorMessage>
            <filterItems>
                <field>Consolidated_Account_Code__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Consolidated_Account_Code__c</referenceTo>
        <relationshipLabel>Rebate</relationshipLabel>
        <relationshipName>RebateToConsolidatedAccountCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_related_to_Export_Control_items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Red Flag</description>
        <inlineHelpText>If yes, select &quot;CTC Contract&quot; as approver of the agreement.</inlineHelpText>
        <label>Contract related to Export Control items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contratual__c</fullName>
        <label>Contratual ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rebate amount over USD 5M need Corp Controller approval</description>
        <inlineHelpText>Rebate amount over USD 5M need Corp Controller approval</inlineHelpText>
        <label>Corporate Control</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebateNyl5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_2__c</fullName>
        <formula>Sold_To_Number_2__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <description>Customer contact person eMail address</description>
        <inlineHelpText>Pls provide customer contact person eMail address</inlineHelpText>
        <label>Customer Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <inlineHelpText>If there is no specific End Customer, please type &quot;N/A&quot;. For Distribution ODM Fullfillment Rebate, please type &quot;Multiple EC&quot; if more than one End Customer.</inlineHelpText>
        <label>End Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explanation_for_Red_Flags__c</fullName>
        <inlineHelpText>If a Red Flag is identified, a justification has to be added for assessment by the approvers</inlineHelpText>
        <label>Explanation for Red Flags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_CP__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used for capturing more Rebate information.</description>
        <label>Follow CP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSM_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve Rebate for Disti , EMS/OEM channel</description>
        <inlineHelpText>Capped Payout &gt;= 100 K$ need GSM Controller approval</inlineHelpText>
        <label>GSM Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebateNoPx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Give_up_ownership_of_stocks_prior_to_pmt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Red Flag</description>
        <label>Give up ownership of stocks prior to pmt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Account_2__c</fullName>
        <formula>IF(
FIND(&quot; - &quot;, Sold_To_Number_2__r.Global_Account__c) = 0,
Sold_To_Number_2__r.Global_Account__c,
LEFT(Sold_To_Number_2__r.Global_Account__c, FIND(&apos; - &apos;, Sold_To_Number_2__r.Global_Account__c))
)</formula>
        <label>Global Account 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Account__c</fullName>
        <formula>IF(
FIND(&quot; - &quot;, Sold_To_Number__r.Global_Account__c) = 0,
Sold_To_Number__r.Global_Account__c,
LEFT(Sold_To_Number__r.Global_Account__c, FIND(&apos; - &apos;, Sold_To_Number__r.Global_Account__c))
)</formula>
        <label>Global Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Channel_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approver for Disti.  OEM/EMS rebates.</inlineHelpText>
        <label>Global Channel Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebateNkus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Sales_OPS_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve Disti. Rebate</description>
        <inlineHelpText>Approve Disti. Rebate</inlineHelpText>
        <label>Global Sales &amp; OPS Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <label>Industry Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Automotive &amp; Transportation</fullName>
                </value>
                <value>
                    <fullName>Computing</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Energy Management</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Home/Building Automation (HABA)</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Secure Identity</fullName>
                </value>
                <value>
                    <fullName>Secure Transactions</fullName>
                </value>
                <value>
                    <fullName>Tagging &amp; Authentication</fullName>
                </value>
                <value>
                    <fullName>Wireless Infrastructure and RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Liabilities_1_MUSD_outside_normal_biz__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Red Flag</description>
        <label>Liabilities &gt; 1 MUSD outside normal biz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Regional_MKT_Approver_Name__c</fullName>
        <description>1508 Release. Request by Pauline Ng. It&apos;s used for capturing more Rebate information.</description>
        <label>Local Regional MKT Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_Exchange_Rate__c</fullName>
        <description>The Exchange Rate against USD which is locked when Rebate is Approved</description>
        <inlineHelpText>The Exchange Rate against USD which is locked when Rebate is Approved</inlineHelpText>
        <label>Locked Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_term_payment_liabilities_12months__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Red Flag</description>
        <inlineHelpText>e.g. lease, royalty or other recurring payment obligations</inlineHelpText>
        <label>Long term payment liabilities &gt; 12months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_liability_exposure_of_supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>e.g. non industry practice caps on liability and indemnities (consult with Legal)</inlineHelpText>
        <label>Low liability exposure of supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment_2__c</fullName>
        <formula>Sold_To_Number_2__r.Market_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <formula>Sold_To_Number__r.Market_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Limitations_to_do_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Red Flag</description>
        <inlineHelpText>Limitations to NXP&apos;s freedom to commercialize its products and technology e.g. exclusivity, lead time, non-compete, IP(R) provisions</inlineHelpText>
        <label>Material Limitations to do Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NXP_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NXP Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NXP_Responsible_eMail__c</fullName>
        <label>NXP Responsible eMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Sold_To_Number__r.Name_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing__c</fullName>
        <label>Packing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>122</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>126</fullName>
                </value>
                <value>
                    <fullName>127</fullName>
                </value>
                <value>
                    <fullName>128</fullName>
                </value>
                <value>
                    <fullName>129</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>132</fullName>
                </value>
                <value>
                    <fullName>133</fullName>
                </value>
                <value>
                    <fullName>134</fullName>
                </value>
                <value>
                    <fullName>135</fullName>
                </value>
                <value>
                    <fullName>136</fullName>
                </value>
                <value>
                    <fullName>138</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>143</fullName>
                </value>
                <value>
                    <fullName>145</fullName>
                </value>
                <value>
                    <fullName>146</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Rebate_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>1508 Release. Request by Pauline Ng for separating Rebate Layout. It&apos;s used for capturing more information of Rebate.</description>
        <inlineHelpText>Only approved Rebate can be selected.</inlineHelpText>
        <label>Previous Rebate Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>eRebate__c.Approval_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>eRebate__c</referenceTo>
        <relationshipLabel>Rebate</relationshipLabel>
        <relationshipName>Rebate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Renew__c</fullName>
        <description>1508 Release. Request by Pauline Ng for separating Rebate Layout. It&apos;s used for capturing more information of Rebate.</description>
        <label>Program Renew ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programe_Type__c</fullName>
        <label>Programe Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contractual Rebate</fullName>
                </value>
                <value>
                    <fullName>Distribution ODM Fullfillment</fullName>
                </value>
                <value>
                    <fullName>Incentive / T&amp;Cs</fullName>
                </value>
                <value>
                    <fullName>OEM / EMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_obligations_exceeding_12_months__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>provisions</inlineHelpText>
        <label>Purchase obligations exceeding 12 months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_Agreement_in_Apttus__c</fullName>
        <description>Rebate agreement in Apttus</description>
        <inlineHelpText>If there is Rebate agreement registered in Aputts  pls select YES and  chcekin Apttus agreement next and give Apttus agreement number</inlineHelpText>
        <label>Rebate Agreement in Apttus ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Approval_Date__c</fullName>
        <description>Records the date when the rebate is approved.</description>
        <label>Rebate Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rebate Currency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FX_Rates__c.CurrencyIsoCode</field>
                <operation>equals</operation>
                <valueField>$Source.CurrencyIsoCode</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FX_Rates__c</referenceTo>
        <relationshipLabel>Rebate</relationshipLabel>
        <relationshipName>Rebate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Effective_Date__c</fullName>
        <label>Rebate Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_End_Date__c</fullName>
        <label>Rebate End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Nr__c</fullName>
        <description>New field that includes Sales Region as well.</description>
        <formula>HYPERLINK(&apos;/&apos; +  Id  , Text(Sales_Region__c) &amp; &apos;-&apos; &amp; Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Nr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Number_For_Export__c</fullName>
        <description>Use this field to in Reports to Export. Dont put this field on Page layout.</description>
        <formula>Text(Sales_Region__c) &amp; &apos;-&apos; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Number For Export</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Program_Name__c</fullName>
        <description>Rebate program name</description>
        <label>Rebate Program Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Reject_Date__c</fullName>
        <description>Record the date when the rebate is rejected.</description>
        <label>Rebate Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Submission_Date__c</fullName>
        <description>Records the date when the Design Win was submitted for approval.</description>
        <label>Rebate Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Programe_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Contractual</fullName>
                </value>
                <value>
                    <fullName>Distribution - ODM POS</fullName>
                </value>
                <value>
                    <fullName>DW (Design Win)</fullName>
                </value>
                <value>
                    <fullName>POS Target</fullName>
                </value>
                <value>
                    <fullName>Scrap Allowance</fullName>
                </value>
                <value>
                    <fullName>Special Deal</fullName>
                </value>
                <value>
                    <fullName>Stock Rotation</fullName>
                </value>
                <value>
                    <fullName>Tech. Support</fullName>
                </value>
                <value>
                    <fullName>VPA(Volume Price Agreement)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_URL__c</fullName>
        <formula>&quot;https://nxp.my.salesforce.com/&quot;+CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Flag__c</fullName>
        <inlineHelpText>If there is Red Flag pls select YES, checkin Red Flag below and  attach justification for approver assessment ;   if no Red Flag pls select NO</inlineHelpText>
        <label>Red Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_for_Red_Flags__c</fullName>
        <formula>HYPERLINK(&quot;http://nww.nxp.com/contracting/html/red_flag_issues.html&quot;, &quot;Red Flag Reference&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference for Red Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_2__c</fullName>
        <formula>Sold_To_Number_2__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Channel_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve Rebate</description>
        <inlineHelpText>Approver for Distic,  OEM/EMS rebates.</inlineHelpText>
        <label>Regional Channel Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rebate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve Rebate for OEM/EMS channel</description>
        <inlineHelpText>Approver for OEM/EMS Rebate</inlineHelpText>
        <label>Regional Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Disti_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approve Rebate for Disti channel</description>
        <label>Regional Disti Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approve Rebate for OEM/EMS channel</inlineHelpText>
        <label>Regional Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eRebate4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Channel__c</fullName>
        <formula>Sold_To_Number__r.Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Country__c</fullName>
        <formula>Sold_To_Number__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_2__c</fullName>
        <formula>Sold_To_Number_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer__c</fullName>
        <formula>Sold_To_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Region__c</fullName>
        <formula>Sold_To_Number__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Country__c</fullName>
        <label>Local Representative Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMEC</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea (South)</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org_2__c</fullName>
        <formula>Sold_To_Number_2__r.Sales_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <formula>Sold_To_Number__r.Sales_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
</CustomObject>